src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark), (prefers-color-scheme: light) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
  .before-content-none::before {
    content: "";
  }
}

/* NAV BAR */

.website-logo {
  transform: scale(1);
  transition: transform 0.5s ease;
}

.website-logo:hover {
  transform: scale(1.05);
  transition: transform 2s ease;
}

/* PROFILE */

@keyframes shortTyping {
  from {
    width: 0;
  }
  to {
    width: 14ch;
  }
}

@keyframes longTyping {
  from {
    width: 0;
  }
  to {
    width: 15.1ch;
  }
}

@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: white;
  }
}

.typewriter-name {
  display: inline-block;
  overflow: hidden;
  border-right: 2px solid black;
  white-space: nowrap;
  animation: longTyping 2s steps(12, end) infinite alternate,
    blink-caret 0.75s step-end infinite;
  font-family: monospace;
  font-weight: 900;
  letter-spacing: 6px;
}

.unselectable {
  user-select: none;
}

@media (min-width: 768px) {
  .typewriter-name {
    animation: shortTyping 2s steps(15, end) infinite alternate,
      blink-caret 0.75s step-end infinite;
  }
}

.profile-image {
  transform: scale(1);
  transition: transform 0.5s ease;
}

.profile-image:hover {
  transform: scale(1.05);
  transition: transform 2s ease;
}

.palenque-style {
  text-shadow: 4px 7px 2px purple;
}

.palenque-style:hover {
  text-shadow: 4px 7px 2px #063e72;
}

.red-text {
  color: red;
}

.grey-text {
  color: grey;
}

.social-icon:hover {
  color: #ffd700;
}

@keyframes popMotion {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

.text-pop:hover {
  animation: popMotion 0.5s ease-in-out;
}

@keyframes glow {
  from {
    box-shadow: 0 0 50px 3px #ffffff88, 0 0 60px 10px #fffae022;
  }
  to {
    box-shadow: 0 0 50px 10px #ffffff88, 0 0 60px 15px #fffae022;
  }
}

@keyframes wave {
  0%,
  100% {
    transform: scale(1) translateZ(0);
  }
  50% {
    transform: scale(1.02) translateZ(0);
  }
}

.card-inner:hover {
  animation: glow 8s ease-in-out infinite alternate,
    wave 8s ease-in-out infinite alternate;
}

.card-inner {
  transition: transform 0.3s ease, box-shadow 0.3s ease;
  will-change: transform, box-shadow;
  border-radius: 0.5em;
  min-height: 30vh;
  display: flex;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: [height of your footer];
}

/* Para: My Services */
/* .gamer-font {
  font-family: "Press Start 2P", cursive;
} */

/* footer social media icons */

/* .font-barlow {
  font-family: "Barlow", sans-serif;
  font-style: italic;
  text-align: left;
} */

/* .font-sixtyfour {
  font-family: "Sixtyfour", sans-serif;
  font-size: 12px;
  text-align: left;
} */

/* ----------------------------------------------
 * Generated by Animista on 2024-2-4 0:16:47
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation text-blur-out
 * ----------------------------------------
 */
@-webkit-keyframes text-blur-out {
  0% {
    -webkit-filter: blur(0.01);
    filter: blur(0.01);
  }
  100% {
    -webkit-filter: blur(12px) opacity(0%);
    filter: blur(12px) opacity(0%);
  }
}
@keyframes text-blur-out {
  0% {
    -webkit-filter: blur(0.01);
    filter: blur(0.01);
  }
  100% {
    -webkit-filter: blur(12px) opacity(0%);
    filter: blur(12px) opacity(0%);
  }
}

.blur-out-description-about {
  display: inline-block;
}

.blur-out-description-about:hover {
  -webkit-animation: text-blur-out 1.2s cubic-bezier(0.55, 0.085, 0.68, 0.53)
    both;
  animation: text-blur-out 1.2s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
}

.blur-out-description-about:not(:hover) {
  -webkit-animation: none;
  animation: none;
  -webkit-filter: blur(0);
  filter: blur(0);
  opacity: 1;
}

/* Foto del About Me */

.extra {
  transition: box-shadow 0.3s ease-in-out, transform 0.5s ease-in-out,
    filter 1s ease-in-out;
  filter: saturate(0.7);
}

.extra:hover {
  box-shadow: 1px 1px 1px #000000, 3px 3px 1px #222222, 5px 5px 1px #aaaaaa,
    10px 10px 1px #ffffff;
  transform: scale(1.1);
  filter: saturate(1.5);
}

@media only screen and (max-width: 600px) {
  .extra:hover {
    box-shadow: none;
  }
}

/* Services Design */

.servicesContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  padding: 40px 0;
}

.servicesContainer .box {
  position: relative;
  width: 320px;
  height: 400px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 40px 30px;
  transition: 0.5s;
}

.servicesContainer .box::before {
  content: " ";
  position: absolute;
  top: 0;
  left: 50px;
  width: 50%;
  height: 100%;
  text-decoration: none;
  background: #fff;
  border-radius: 8px;
  transform: skewX(15deg);
  transition: 0.5s;
}

.servicesContainer .box::after {
  content: "";
  position: absolute;
  top: 0;
  left: 50;
  width: 50%;
  height: 100%;
  background: #fff;
  border-radius: 8px;
  transform: skewX(15deg);
  transition: 0.5s;
  filter: blur(30px);
}

.servicesContainer .box:hover:before,
.servicesContainer .box:hover:after {
  transform: skewX(0deg);
  left: 20px;
  width: calc(100% - 90px);
}

.servicesContainer .box-color-1:before,
.servicesContainer .box-color-1:after {
  background: linear-gradient(315deg, #ffbc00, #ff0058);
}

.servicesContainer .box-color-2:before,
.servicesContainer .box-color-2:after {
  background: linear-gradient(315deg, #03a9f4, #ff0058);
}

.servicesContainer .box-color-3:before,
.servicesContainer .box-color-3:after {
  background: linear-gradient(315deg, #4dff03, #00d0ff);
}

.servicesContainer .box span {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 5;
  pointer-events: none;
}

.servicesContainer .box span::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  border-radius: 8px;
  background: rgba(255, 255, 255, 0.1);
  opacity: 0;
  transition: 0.1s;
  animation: animate 2s ease-in-out infinite;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
}

.servicesContainer .box:hover span::before {
  top: -50px;
  left: 50px;
  width: 100px;
  height: 100px;
  opacity: 1;
}

.servicesContainer .box span::after {
  content: "";
  position: absolute;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  background: rgba(255, 255, 255, 0.1);
  opacity: 0;
  transition: 0.5s;
  animation: animate 2s ease-in-out infinite;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
  animation-delay: -1s;
}

.servicesContainer .box:hover span:after {
  bottom: -50px;
  right: 50px;
  width: 100px;
  height: 100px;
  opacity: 1;
}

@keyframes animate {
  0%,
  100% {
    transform: translateY(10px);
  }

  50% {
    transform: translate(-10px);
  }
}

.servicesContainer .box .content {
  position: relative;
  left: 0;
  padding: 20px 40px;
  background: rgba(255, 255, 255, 0.05);

  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  z-index: 1;
  transform: 0.5s;
  color: #fff;
}

.servicesContainer .box:hover .content {
  left: -25px;
  padding: 60px 40px;
}

.servicesContainer .box .content h2 {
  font-size: 2em;
  color: #fff;
  margin-bottom: 10px;
}

.servicesContainer .box .content p {
  font-size: 1.1em;
  margin-bottom: 10px;
  line-height: 1.4em;
}

.servicesContainer .box .content a {
  display: inline-block;
  font-size: 1.1em;
  color: #111;
  background: #fff;
  padding: 10px;
  border-radius: 4px;
  text-decoration: none;
  font-weight: 700;
  margin-top: 5px;
}

.servicesContainer .box .content a:hover {
  background: #ffcf4d;
  border: 1px solid rgba(255, 0, 88, 0.4);
  box-shadow: 0 1px 15px rgba(1, 1, 1, 0.2);
}

/* Button Send */

.palebutton {
  transform: translate(10%, 30%);
  width: 200px;
  height: 60px;
  text-align: center;

  color: #000000;
  font-size: 25px;
  text-transform: uppercase;
  text-decoration: none;
  font-family: sans-serif;
  box-sizing: border-box;
  background: linear-gradient(
    90deg,
    yellow,
    orange,
    red,
    violet,
    purple,
    blue,
    yellow
  );
  background-size: 400%;
  border-radius: 30px;
  z-index: 1;
}
.palebutton:hover {
  animation: animate 8s linear infinite;
}
@keyframes animate {
  0% {
    background-position: 0%;
  }
  100% {
    background-position: 400%;
  }
}
.palebutton:before {
  content: "";
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  z-index: -1;
  background: linear-gradient(45deg, #f15523, #ef3224, #7c3697);
  background-size: 400%;
  border-radius: 40px;
  opacity: 0;
  transition: 0.5%;
}
.palebutton:hover:before {
  filter: blur(20px);
  opacity: 1;
  animation: animate 8s linear infinite;
}

/**/

#button-lang,
#button-lang-2 {
  background-color: #4a90e2; /* Color de fondo azul */
  color: #ffffff; /* Color de texto blanco */
  font-weight: bold; /* Texto en negrita */
  padding: 8px 16px; /* Relleno */
  border: none; /* Sin borde */
  border-radius: 4px; /* Bordes redondeados */
  cursor: pointer; /* Cambiar el cursor al pasar el ratón */
}

#button-lang:hover,
#button-lang-2:hover {
  background-color: #357ebd; /* Color de fondo azul más oscuro al pasar el ratón */
}

#button-lang + #button-lang,
#button-lang-2 + #button-lang-2 {
  margin-left: 8px;
}

/*digitalClock*/

.clock-container {
  background-color: rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  padding: 10px;
  filter: blur(0px);
}

.clock {
  background: linear-gradient(135deg, #333333, #292929);
  border-radius: 5px;
  padding: 10px;
  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
}

.time {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #ffffff;
  font-size: 24px;
  font-weight: bold;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
}

.separator {
  margin: 0 5px;
  opacity: 0.7;
}

/* Fancy Button */

.fancy-btn {
  background-image: linear-gradient(
    135deg,
    #00d372,
    #56acff 34%,
    #4f85d4 67%,
    #d87cac
  );
  border-radius: 100em;
  padding: 0.3vw;
  max-width: 100%;
  display: inline-block;
}

.fancy-btn div {
  transition: all 0.3s ease;
}

.fancy-btn:hover div {
  background: transparent;
}

/*---Svg curve---*/

.line {
  height: 1px;
  position: relative;

  width: 100%;

  margin-bottom: 20px;
}

.line svg {
  position: absolute;

  height: 100px;

  width: 100%;

  top: -50px;
}

.line svg path {
  stroke-width: 1px;

  stroke: white;

  fill: none;
}

.box {
  height: 40px;

  width: 100%;

  display: flex;

  position: relative;

  top: -20px;

  z-index: 1;
}

/*Contact*/

.borderBlack {
  @apply border border-black/10;
}

#contact {
  width: 90%;
  max-width: 38rem;
  margin: 0 auto 2rem;
}

@media (max-width: 640px) {
  #contact {
    width: 100%;
    padding: 0 1rem;
  }
  input,
  textarea {
    font-size: 0.8rem;
  }
  button {
    font-size: 0.8rem;
    width: 6rem;
  }
}

